ops/k8s/goodbye.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodbye
spec:
  selector:
    matchLabels:
      app: goodbye
  replicas: 2
  template:
    metadata:
      labels:
        app: goodbye
    spec:
      containers:
      - name: goodbye
        image: bustbyte/coronastatus:goodbye
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goodbye
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: goodbye
