ops/k8s/colombia.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colombia
spec:
  selector:
    matchLabels:
      app: colombia
  replicas: 2
  template:
    metadata:
      labels:
        app: colombia
    spec:
      containers:
      - name: colombia
        image: bustbyte/coronastatus
        ports:
        - containerPort: 7272
---
apiVersion: v1
kind: Service
metadata:
  name: colombia
spec:
  ports:
  - port: 80
    targetPort: 7272
  selector:
    app: colombia
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: colombia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # We redirect to non-www if host is www.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.coronastatus.co') {
        rewrite ^ https://coronastatus.co$request_uri permanent;
      }
spec:
  rules:
  - host: coronastatus.co
    http:
      paths:
      - backend:
          serviceName: colombia
          servicePort: 80
  - host: www.coronastatus.co
    http:
      paths:
      - backend:
          serviceName: colombia
          servicePort: 80
  tls:
  - hosts:
    - coronastatus.co
    - www.coronastatus.co
    secretName: co-coronastatus-cert-tls
